Major changes in the Diagnosis/ Visits logic - diagnosis has only string with final diagnosis, while everything else from it is moved to the visit